# swift-toolchains

./: .after_failure.sh  .bazelrc  .dockerignore  .gitignore  .travis.sh  .travis.yml  Dockerfile  Dockerfile.base  Dockerfile.llvm  Dockerfile.obfuscator  Dockerfile.vanilla  Jenkinsfile  LICENSE  Makefile  README.md  WORKSPACE.bazel  base.bash  build.bash  build_example.bash  config.mak  cpp_wrapper.c  cpp_wrapper.py  do_clang_build.bash  docker_nametag  most_recent_tag.bash  publish.sh  pull_ccache.bash  push.bash  push_ccache.bash  run_build_shell.bash  s3_download.bash  stage_sysroot.bash  toolchainfile.cmake  toolchainfile.cmake.m4
.github/workflows/: aarch64-sysroot.yaml  bullseye-aarch64-sysroot.yaml  bullseye-x86_64-sysroot.yaml  musl.yaml
docker/: Dockerfile
example/: Makefile  test.c  test.cc
imagemagick/: imagemagick.tool.7.1.0.nupkg  makepkg.ps1
imagemagick/src/: makepkg.ps1
imagemagick/src/imagemagick.tool.7.1.0.nupkg/: [Content_Types].xml  imagemagick.tool.nuspec
imagemagick/src/imagemagick.tool.7.1.0.nupkg/_rels/: .rels
imagemagick/src/imagemagick.tool.7.1.0.nupkg/tools/: chocolateyInstall.ps1
jenkins/: createArmhfMuslGcc.groovy
llvm/: Apple-stage1.cmake  Apple-stage2.cmake  Distribution-stage2.cmake  Distribution-x86-stage2.cmake  Distribution-x86.cmake  Distribution.cmake
musl/: Dockerfile  build.sh
patches/: 0001-Port-bcf-bugfixes-from-https-github.com-obfuscator-l.patch  0002-Port-in-simple-string-encryption-patch.patch  0003-Add-missing-include-diagnosed-by-the-modules-build.patch
sysroot/: BUILD.bazel  sysroot-creator.sh
sysroot/generated_package_lists/: bullseye.amd64  bullseye.arm64
sysroot/test/: lapack.cc  uuid.cc
