cc_binary(
    name = "uuid",
    srcs = ["test/uuid.cc"],
    tags = ["manual"],
    linkopts = [
        "-luuid",
    ],
)

cc_binary(
    name = "lapack",
    srcs = ["test/lapack.cc"],
    tags = ["manual"],
    linkopts = [
        "-lm",
        "-lpthread",
        "-lblas",
        "-llapack",
    ],
)
